remove all possible apikey